pgAdmin/k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - port: 5050
      targetPort: 80
