pgAdmin/k8s/resources/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-http-route
  namespace: pgadmin
spec:
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway
  hostnames:
    - "pg.odomain"
    - "pgadmin.odomain"
    - "postgres.odomain"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: CORS
          cors:
            allowOrigins:
              - "https://odomain"
              - "https://www.odomain"
              - "https://dash.odomain"
              - "https://dashboard.odomain"
            allowMethods:
              - GET
              - OPTIONS
            allowHeaders:
              - Content-Type
              - Authorization
            allowCredentials: true
      backendRefs:
        - name: pgadmin-svc
          port: 5050
